--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="col-md-12 col-12">
              <div class="row">
               <div class="col-md-2">
-                <img class="img-responsive" src="img/goldmedal-head.webp" alt="Chania" style="width: 100%;"> 
+                <img class="img-responsive" src="img/goldmedal-head.webp" alt="Chania"> 
               </div>
               <div class="col-md-2 pl-5">
                 <b>About Goldmedal</b><br>
